--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body class="bg-gradient-to-b from-[#1e293b] to-[#2d4258] h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
